--- a/index.html
+++ b/index.html
@@ -164,50 +164,26 @@
   <h2 class="section-title">Professional Skills</h2>
   <div class="top-skills">
     <h3 class="subtitle">Top Skills</h3>
-    <div class="row">
-      <div class="part">
-        <div class="col-1">
-          <div class="item-inner">
-            <div class="chart-pie">
-              <div class="chart-theme" data percent="90"><span>90</span>%</div>
-            </div><!--chart-pie-->
-
-            <h4 class="skill-name">HTML</h4>
-            <div class="level">Fresher</div>
-            <div class="desc"></div><!--add desc-->
-          </div><!--item-inner-->
-        </div><!--col-1-->
-      </div><!--part-->
-
-    <div class="part">
-        <div class="col-2">
-          <div class="item-inner">
-            <div class="chart-pie">
-              <div class="chart-theme" data percent="90"><span>90</span>%</div>
-            </div><!--chart-pie-->
-
-            <h4 class="skill-name">CSS3</h4>
-            <div class="level">Biginner</div>
-            <div class="desc"></div><!--add desc-->
-          </div><!--item-inner-->
-        </div><!--col-2-->
-      </div><!--part-->
-
-
-      <div class="part">
-        <div class="col-3">
-          <div class="item-inner">
-            <div class="chart-pie">
-              <div class="chart-theme" data percent="60"><span>60</span>%</div>
-            </div><!--chart-pie-->
-
-            <h4 class="skill-name">Javascript</h4>
-            <div class="level">Biginner</div>
-            <div class="desc"></div><!--add desc-->
-          </div><!--item-inner-->
-        </div><!--col-3-->
-      </div><!--part-->
-    </div><!--row-->
+    <div class="row clearfix">
+      <div class="item-inner">
+        <div class="chart-theme" data-percent="90"></div>
+        <h4 class="skill-name">HTML</h4>
+        <div class="level">Fresher</div>
+        <div class="desc"></div><!--add desc-->
+      </div><!--item-inner-->
+      <div class="item-inner">
+        <div class="chart-theme" data-percent="90"></div>
+        <h4 class="skill-name">CSS3</h4>
+        <div class="level">Biginner</div>
+        <div class="desc"></div><!--add desc-->
+      </div><!--item-inner-->
+      <div class="item-inner">
+        <div class="chart-theme" data-percent="60"></div>
+        <h4 class="skill-name">Javascript</h4>
+        <div class="level">Biginner</div>
+        <div class="desc"></div><!--add desc-->
+      </div><!--item-inner-->
+    </div>
   </div><!--top-skills-->
 
 
@@ -450,35 +426,7 @@
 
 <!--bottom to top scroller-->
 <button class="scroller" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
-
- <!-- *****CONFIGURE STYLE (REMOVE ON YOUR PRODUCTION SITE)******
-    <div id="config-panel" class="config-panel d-none d-lg-block">
-        <div class="panel-inner">
-            <a id="config-trigger" class="config-trigger config-panel-hide" href="#"><i class="fa fa-cog"></i></a>
-            <h5 class="panel-title">Choose Colour</h5>
-            <ul id="color-options" class="list-unstyled list-inline">
-                <li class="theme-1 active list-inline-item"><a data-style="assets/css/styles.css" data-chart="#00BCD4" href="#"></a></li>
-                <li class="theme-2  list-inline-item"><a data-style="assets/css/styles-2.css" data-chart="#03A9F4" href="#"></a></li>
-                <li class="theme-3  list-inline-item"><a data-style="assets/css/styles-3.css" data-chart="#009688" href="#"></a></li>
-                <li class="theme-4  list-inline-item"><a data-style="assets/css/styles-4.css" data-chart="#4CAF50" href="#"></a></li>
-                <li class="theme-5  list-inline-item"><a data-style="assets/css/styles-5.css" data-chart="#8BC34A" href="#"></a></li>
-                <li class="theme-6  list-inline-item"><a data-style="assets/css/styles-6.css" data-chart="#C0CA33" href="#"></a></li>
-                <li class="theme-7  list-inline-item"><a data-style="assets/css/styles-7.css" data-chart="#FFC107" href="#"></a></li>
-                <li class="theme-8  list-inline-item"><a data-style="assets/css/styles-8.css" data-chart="#FF9800" href="#"></a></li>
-                <li class="theme-9  list-inline-item"><a data-style="assets/css/styles-9.css" data-chart="#FF5722" href="#"></a></li>
-                <li class="theme-10  list-inline-item"><a data-style="assets/css/styles-10.css" data-chart="#795548" href="#"></a></li>
-                <li class="theme-11  list-inline-item"><a data-style="assets/css/styles-11.css" data-chart="#607D8B" href="#"></a></li>
-                <li class="theme-12  list-inline-item"><a data-style="assets/css/styles-12.css" data-chart="#673AB7" href="#"></a></li>
-                <li class="theme-13  list-inline-item"><a data-style="assets/css/styles-13.css" data-chart="#3F51B5" href="#"></a></li>
-                <li class="theme-14  list-inline-item"><a data-style="assets/css/styles-14.css" data-chart="#2196F3" href="#"></a></li>
-                <li class="theme-15  list-inline-item"><a data-style="assets/css/styles-15.css" data-chart="#9C27B0" href="#"></a></li>
-                <li class="theme-16  list-inline-item"><a data-style="assets/css/styles-16.css" data-chart="#E91E63" href="#"></a></li>
-            </ul>
-            <a id="config-close" class="close" href="#"><i class="fa fa-times-circle"></i></a>  -->
-        </div><!--//panel-inner-->
-    </div><!--//configure-panel-->
-
+<script src="radialindicator.min.js"></script>
 <script src="action.js"></script>
 </body>
 </html>
