--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
 <!--bottom to top scroller-->
 <button class="scroller" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-<script src="radialindicator.min.js"></script>
+<script src="radialIndicator.min.js"></script>
 <script src="action.js"></script>
 </body>
 </html>
