renaming profile pic image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 <div class="intro">
-  <img class="profile-image" src="photo_smp.jpg" alt="sushree">
+  <img class="profile-image" src="photo_smp.JPG" alt="sushree">
   <h1 class="name">Sushree Mitali Pradhan</h1>
   <div class="title">Software Engineer</div>
   <div class="profile">
