--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 <div class="intro">
-  <img class="profile-image" src="photo_smp.JPG" alt="sushree">
+  <img class="profile-image" src="photo_smp.jpg" alt="sushree">
   <h1 class="name">Sushree Mitali Pradhan</h1>
   <div class="title">Software Engineer</div>
   <div class="profile">
@@ -168,19 +168,19 @@
       <div class="item-inner">
         <div class="chart-theme" data-percent="90"></div>
         <h4 class="skill-name">HTML</h4>
-        <div class="level">Fresher</div>
+        <div class="level">Excellent</div>
         <div class="desc"></div><!--add desc-->
       </div><!--item-inner-->
       <div class="item-inner">
         <div class="chart-theme" data-percent="90"></div>
         <h4 class="skill-name">CSS3</h4>
-        <div class="level">Biginner</div>
+        <div class="level">Excellent</div>
         <div class="desc"></div><!--add desc-->
       </div><!--item-inner-->
       <div class="item-inner">
         <div class="chart-theme" data-percent="60"></div>
         <h4 class="skill-name">Javascript</h4>
-        <div class="level">Biginner</div>
+        <div class="level">Intermediate</div>
         <div class="desc"></div><!--add desc-->
       </div><!--item-inner-->
     </div>
@@ -425,7 +425,7 @@
 
 <!--bottom to top scroller-->
 <button class="scroller" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-<script src="radialIndicator.min.js"></script>
+<script src="radialindicator.min.js"></script>
 <script src="action.js"></script>
 </body>
 </html>
