--- a/index.html
+++ b/index.html
@@ -166,19 +166,19 @@
     <h3 class="subtitle">Top Skills</h3>
     <div class="row clearfix">
       <div class="item-inner">
-        <div class="chart-theme" data-percent="90"></div>
+        <div class="chart-theme" data-percent="50"></div>
         <h4 class="skill-name">HTML</h4>
-        <div class="level">Excellent</div>
+        <div class="level">Intermediate</div>
         <div class="desc"></div><!--add desc-->
       </div><!--item-inner-->
       <div class="item-inner">
-        <div class="chart-theme" data-percent="90"></div>
+        <div class="chart-theme" data-percent="50"></div>
         <h4 class="skill-name">CSS3</h4>
-        <div class="level">Excellent</div>
+        <div class="level">Intermediate</div>
         <div class="desc"></div><!--add desc-->
       </div><!--item-inner-->
       <div class="item-inner">
-        <div class="chart-theme" data-percent="60"></div>
+        <div class="chart-theme" data-percent="50"></div>
         <h4 class="skill-name">Javascript</h4>
         <div class="level">Intermediate</div>
         <div class="desc"></div><!--add desc-->
@@ -390,7 +390,7 @@
 <section id="contact-section" class="contact-section">
   <h2 class="section-title">Get in Touch</h2>
   <div class="intro">
-    <img class="profile-image" src="photo_smp.jpg" alt="sushree">
+    <img class="profile-image" src="photo_smp.JPG" alt="sushree">
     <div class="dialog">
                     <p>I'm currently taking on freelance work. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.</p>
            <p><strong>I can help with the following:</strong></p>
