--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 <div class="intro">
-  <img class="profile-image" src="photo_smp.jpg" alt="sushree">
+  <img class="profile-image" src="photo_smp.JPG" alt="sushree">
   <h1 class="name">Sushree Mitali Pradhan</h1>
   <div class="title">Software Engineer</div>
   <div class="profile">
@@ -425,7 +425,7 @@
 
 <!--bottom to top scroller-->
 <button class="scroller" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-<script src="radialindicator.min.js"></script>
+<script src="radialIndicator.min.js"></script>
 <script src="action.js"></script>
 </body>
 </html>
