--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             <li><i class="fa fa-check"></i> UI development</li>
             <li><i class="fa fa-check"></i> UX prototyping</li>
           </ul><!--list-unstyled-->
-           <p>Drop me a line at <a class="info" href="mailto:someone@example.com">james.doe@website.com</a> or call me at <a class="info" href="tel:01234567890">0123 456 7890</a></p>
+           <p>Drop me a line at <a class="info" href="sm.pradhan16@gmail.com">sm.pradhan16@gmail.com</a> or call me at <a class="info" href="tel:07077899199">07077899199</a></p>
           <ul class="social list-inline">
             <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
             <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -424,7 +424,7 @@
 </footer><!--footer text-center--> 
 
 <!--bottom to top scroller-->
-<button class="scroller" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<button class="scroller" onclick="topFunction()" id="myBtn" title="Scroll Bar to top" style="position: fixed; bottom: 5px; right: 5px;opacity: 1; cursor: pointer;"><i class="fa fa-angle-up"></i></button>
 <script src="radialindicator.min.js"></script>
 <script src="action.js"></script>
 </body>
