--- a/index.html
+++ b/index.html
@@ -84,25 +84,7 @@
           <li>Quick learner. Good communication and Interpersonal skill.</li>
         </ul>
       </div><!--job-descrip-->
-      </div><!--part-->
-
-      <div class="part">
-        <div class="workplace">
-          <h3 class="place">Apple</h3>
-          <div class="location"><i class="fa fa-map-marker"></i>New York</div>
-        </div><!--workplace-->
-
-        <div class="job-position">
-          <div class="title">Lead Software Engineer</div>
-          <div class="time">2015 - 2016</div>
-        </div><!--job-position-->
-
-        <div class="job-descrip">
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
-        </div><!--job-descrip-->
-        
-      </div><!--part-->
-       
+      </div><!--part-->   
      </div><!--timeline-->
 
    </section><!--experiences-section-->
@@ -424,7 +406,7 @@
 </footer><!--footer text-center--> 
 
 <!--bottom to top scroller-->
-<button class="scroller" onclick="topFunction()" id="myBtn" title="Scroll Bar to top" style="position: fixed; bottom: 5px; right: 5px;opacity: 1; cursor: pointer;"><i class="fa fa-angle-up"></i></button>
+<button class="scroller" onclick="topFunction()" id="myBtn" title="Scroll Bar to top"><i class="fa fa-angle-up"></i></button>
 <script src="radialindicator.min.js"></script>
 <script src="action.js"></script>
 </body>
