--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
 <div class="intro">
   <div class="container text-center">
-  <img class="profile-image" src="photo_smp.JPG" alt="sushree">
+  <!--<img class="profile-image" src="photo_smp.JPG" alt="sushree">-->
+  <div class="profile-image"></div>
   <h1 class="name">Sushree Mitali Pradhan</h1>
   <div class="title">Software Engineer</div>
   <div class="profile">
@@ -376,7 +377,8 @@
 <section id="contact-section" class="contact-section">
   <h2 class="section-title">Get in Touch</h2>
   <div class="intro">
-    <img id="image" class="profile-image" src="photo_smp.JPG" alt="sushree">
+    <!--<img id="image" class="profile-image" src="photo_smp.JPG" alt="sushree">-->
+    <div class="profile-image"></div>
     <div class="dialog">
                     <p>I'm currently taking on freelance work. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.</p>
            <p><strong>I can help with the following:</strong></p>
