--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </header>
 
 <div class="wrapper container">
-   <section id="experiences-section" class="experiences-section">
+   <section id="experiences-section" class="experiences-section section">
      <h2 class="section-title">Work Experiences</h2>
      <div class="timeline">
       <div class="part">
@@ -94,7 +94,7 @@
 
    </section><!--experiences-section-->
 
-   <section id="education-section" class="education-section">
+   <section id="education-section" class="education-section section">
     <h2 class="section-title">Education</h2>
     <div class="row">
       <div class="part">
@@ -185,7 +185,7 @@
 
 
 
-<section id="testimonials-section" class="testimonials-section">
+<section id="testimonials-section" class="testimonials-section section">
   <h2 class="section-title">Testimonials</h2>
 <div class="slideshow-container">
 
@@ -237,7 +237,7 @@
 </section><!--testimonials-section-->
 
 
-<section id="portfolio-section" class="portfolio-section">
+<section id="portfolio-section" class="portfolio-section section">
   <h2 class="section-title">Portfolio</h2>
   <ul id="filters" class="filters">
     <li class="type active" onclick="filterSelection('all')">ALL</li>
@@ -374,7 +374,7 @@
   </div><!--item-wrapper-->
 </section><!--portfolio-section-->
 
-<section id="contact-section" class="contact-section">
+<section id="contact-section" class="contact-section section">
   <h2 class="section-title">Get in Touch</h2>
   <div class="intro">
     <!--<img id="image" class="profile-image" src="photo_smp.JPG" alt="sushree">-->
