--- a/index.html
+++ b/index.html
@@ -11,57 +11,56 @@
   <header class="header">
     <div class="top-bar container-fluid">
 
-<div class="actions">
-<a class="btn" href="mailto:someone@example.com"><i class="fa fa-paper-plane">  HIRE ME</i></a>
-<a class="btn" href="#"><i class="fa fa-download">  DOWNLOAD MY RESUME</i></a>
-</div><!--action-->
- <ul class="social list-inline">
-  <li class="list-inline-item"><a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a></li>
-  <li class="list-inline-item"><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-  <li class="list-inline-item"><a href="https://plus.google.com/"><i class="fa fa-google-plus"></i></a></li>
-  <li class="list-inline-item"><a href="https://github.com/"><i class="fa fa-github-alt"></i></a></li>
-  <li class="list-inline-item"><a href="https://web.skype.com"><i class="fa fa-skype"></i></a></li>
-</ul><!--social-->
-</div><!--top-bar-->
+      <div class="actions">
+        <a class="btn" href="mailto:someone@example.com"><i class="fa fa-paper-plane">  HIRE ME</i></a>
+        <a class="btn" href="#"><i class="fa fa-download">  DOWNLOAD MY RESUME</i></a>
+      </div><!--action-->
+     <ul class="social list-inline">
+      <li class="list-inline-item"><a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a></li>
+      <li class="list-inline-item"><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+      <li class="list-inline-item"><a href="https://plus.google.com/"><i class="fa fa-google-plus"></i></a></li>
+      <li class="list-inline-item"><a href="https://github.com/"><i class="fa fa-github-alt"></i></a></li>
+      <li class="list-inline-item"><a href="https://web.skype.com"><i class="fa fa-skype"></i></a></li>
+    </ul><!--social-->
+  </div><!--top-bar-->
 
 
-<div class="intro">
-  <div class="container text-center">
-  <!--<img class="profile-image" src="photo_smp.JPG" alt="sushree">-->
-  <div class="profile-image"></div>
-  <h1 class="name">Sushree Mitali Pradhan</h1>
-  <div class="title">Software Engineer</div>
-  <div class="profile">
-            <p>To pursue a new career in the field of Information technology where i can best utilize my skills and education towards the growth and success of the organization.</p>
+  <div class="intro">
+    <div class="container text-center">
+      <div class="profile-image"></div>
+      <h1 class="name">Sushree Mitali Pradhan</h1>
+      <div class="title">Software Engineer</div>
+      <div class="profile">
+        <p>To pursue a new career in the field of Information technology where i can best utilize my skills and education towards the growth and success of the organization.</p>
       </div><!--//profile-->
     </div><!--container-->
-</div><!--intro-->
+  </div><!--intro-->
 
-<div class="contact-info">
-  <div class="container text-center">
-  <ul class="list-inline">
-    <li class="email list-inline-item"><i class="fa fa-envelope"></i><a href="mailto:sm.pradhan16@gmail.com">sm.pradhan16@gmail.com</a></li>
-    <li class="phone list-inline-item"><i class="fa fa-phone"></i> <a href="tel: 8763261595">8763261595/7077899199</a></li>
-    <li class="website list-inline-item"><i class="fa fa-globe"></i><a href="#" target="_blank">portfoliosite.com</a></li>
-  </ul>
-</div><!--container-->
+  <div class="contact-info">
+    <div class="container text-center">
+      <ul class="list-inline">
+        <li class="email list-inline-item"><i class="fa fa-envelope"></i><a href="mailto:sm.pradhan16@gmail.com">sm.pradhan16@gmail.com</a></li>
+        <li class="phone list-inline-item"><i class="fa fa-phone"></i> <a href="tel: 8763261595">8763261595/7077899199</a></li>
+        <li class="website list-inline-item"><i class="fa fa-globe"></i><a href="#" target="_blank">portfoliosite.com</a></li>
+      </ul>
+    </div><!--container-->
   </div><!--contact-info-->
 
-<div id="page-nav-holder" class="page-nav-space-holder">
-            <div class="page-nav-wrapper">
-                <div class="container">
-                    <ul class="page-nav">
-                        <li class="nav-item"><a class="scrollto nav-link" href="#experiences-section" onclick="toggleFunction(this)">Experiences</a></li>
-                        <li class="nav-item"><a class="scrollto nav-link" href="#education-section" onclick="toggleFunction(this)">Education</a></li>
-                        <li class="nav-item"><a class="scrollto nav-link" href="#skills-section" onclick="toggleFunction(this)">Skills</a></li>
-                        <li class="nav-item"><a class="scrollto nav-link" href="#testimonials-section" onclick="toggleFunction(this)">Testimonials</a></li>
-                        <li class="nav-item"><a class="scrollto nav-link" href="#portfolio-section" onclick="toggleFunction(this)">Portfolio</a></li>
-                        <li class="nav-item"><a class="scrollto nav-link" href="#contact-section" onclick="toggleFunction(this)">Contact</a></li>
-                    </ul><!--//page-nav-->
-                </div>
-            </div><!--//page-nav-wrapper-->
-        </div>
-      </header>
+  <div id="page-nav-holder" class="page-nav-space-holder">
+    <div class="page-nav-wrapper">
+      <div class="container">
+        <ul class="page-nav">
+            <li class="nav-item"><a class="scrollto nav-link" href="#experiences-section" onclick="toggleFunction(event, this)">Experiences</a></li>
+            <li class="nav-item"><a class="scrollto nav-link" href="#education-section" onclick="toggleFunction(event, this)">Education</a></li>
+            <li class="nav-item"><a class="scrollto nav-link" href="#skills-section" onclick="toggleFunction(event, this)">Skills</a></li>
+            <li class="nav-item"><a class="scrollto nav-link" href="#testimonials-section" onclick="toggleFunction(event, this)">Testimonials</a></li>
+            <li class="nav-item"><a class="scrollto nav-link" href="#portfolio-section" onclick="toggleFunction(event, this)">Portfolio</a></li>
+            <li class="nav-item"><a class="scrollto nav-link" href="#contact-section" onclick="toggleFunction(event, this)">Contact</a></li>
+          </ul><!--//page-nav-->
+      </div>
+    </div><!--//page-nav-wrapper-->
+  </div>
+</header>
 
 <div class="wrapper container">
    <section id="experiences-section" class="experiences-section section">
