--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
 <section id="portfolio-section" class="portfolio-section section">
   <h2 class="section-title">Portfolio</h2>
   <ul id="filters" class="filters">
-    <li class="type active" onclick="filterSelection('all')">ALL</li>
-    <li class="type" onclick="filterSelection('backend')">Back-end</li>
-    <li class="type" onclick="filterSelection('frontend')">Front-end</li>
+    <li class="type active" onclick="filterSelection(event, 'all')" id="defaultOpen">ALL</li>
+    <li class="type" onclick="filterSelection(event, 'backend')">Back-end</li>
+    <li class="type" onclick="filterSelection(event, 'frontend')">Front-end</li>
   </ul><!--filters-->
 
   <div class="item-wrapper clearfix" id="portfolio">
