--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@
     <section id="portfolio-section" class="portfolio-section section">
       <h2 class="section-title">Portfolio</h2>
       <ul id="filters" class="filters">
-        <li class="type active" onclick="filterSelection('all')">ALL</li>
-        <li class="type" onclick="filterSelection('backend')">Back-end</li>
-        <li class="type" onclick="filterSelection('frontend')">Front-end</li>
+        <li class="type active" onclick="filterSelection('all', this)">ALL</li>
+        <li class="type" onclick="filterSelection('backend', this)">Back-end</li>
+        <li class="type" onclick="filterSelection('frontend', this)">Front-end</li>
       </ul>
       <!--filters-->
       <div class="item-wrapper clearfix" id="portfolio">
