--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="header">
     <div class="top-bar container-fluid">
       <div class="actions">
-        <a class="btn" href="mailto:someone@example.com"><i class="fa fa-paper-plane">  HIRE ME</i></a>
+        <a class="btn d-none" href="mailto:someone@example.com"><i class="fa fa-paper-plane">  HIRE ME</i></a>
         <a class="btn" href="#"><i class="fa fa-download">  DOWNLOAD MY RESUME</i></a>
       </div>
       <!--action-->
@@ -103,67 +103,31 @@
     <!--experiences-section-->
     <section id="education-section" class="education-section section">
       <h2 class="section-title">Education</h2>
-      <div class="row">
-        <div class="part">
-          <div class="col-1">
-            <div class="item-inner">
-              <h3 class="degree">B.Tech in Electronics and Telecommunication engineering</h3>
-              <div class="education-body">
-                C V Raman College of Engineering,Odisha
-              </div>
-              <!--education-body-->
-              <div class="time">2010 - 2013</div>
-              <div class="desc">
-                <p></p>
-                <!--incert desc-->
-              </div>
-              <!--desc-->
-            </div>
-            <!--item-inner-->
+      <div class="row clearfix">
+        <div class="item-inner">
+          <h3 class="degree">B.Tech in Electronics and Telecommunication engineering</h3>
+          <div class="education-body">
+            C V Raman College of Engineering,Odisha
           </div>
-          <!--col-1-->
+          <!--education-body-->
+          <div class="time">2010 - 2013</div>
         </div>
-        <!--part-->
-        <div class="part">
-          <div class="col-2">
-            <div class="item-inner">
-              <h3 class="degree">Diploma in Electronics and Telecommunication engineering</h3>
-              <div class="education-body">
-                Indira Gandhi Instiute of Technology,Odisha
-              </div>
-              <!--education-body-->
-              <div class="time">2006 - 2009</div>
-              <div class="desc">
-                <p></p>
-                <!--incert desc-->
-              </div>
-              <!--desc-->
-            </div>
-            <!--item-inner-->
+        <div class="item-inner">
+          <h3 class="degree">Diploma in Electronics and Telecommunication engineering</h3>
+          <div class="education-body">
+            Indira Gandhi Instiute of Technology,Odisha
           </div>
-          <!--col-2-->
+          <!--education-body-->
+          <div class="time">2006 - 2009</div>
         </div>
-        <!--part-->
-        <div class="part">
-          <div class="col-3">
-            <div class="item-inner">
-              <h3 class="degree">Matriculation</h3>
-              <div class="education-body">
-                Angul High School,Odisha
-              </div>
-              <!--education-body-->
-              <div class="time">2004 - 2005</div>
-              <div class="desc">
-                <p></p>
-                <!--incert desc-->
-              </div>
-              <!--desc-->
-            </div>
-            <!--item-inner-->
+        <div class="item-inner">
+          <h3 class="degree">Matriculation</h3>
+          <div class="education-body">
+            Angul High School,Odisha
           </div>
-          <!--col-3-->
+          <!--education-body-->
+          <div class="time">2004 - 2005</div>
         </div>
-        <!--part-->
       </div>
       <!--row-->
     </section>
